refactor(project): 从地毯迁移至卷帘门
- 将地毯相关配置全部迁移至卷帘门
- 切换加载器至NeoForge
- 同步修改ci